I removed the top secton styles and added a width to the header and one rem to its padding. I added padding and more margin to my intro. I also changed the button in the work section from a rounded shape to one of the rectangle shape with a cool effect. I also fixed the alignment of those buttons and added the spacing of the project with padding and margin. I also centered the contact form header and moved the appropriate styles to the correct sass files. Finally I removed style duplicates.

--- a/styles/Globals/_boilerplate.scss
+++ b/styles/Globals/_boilerplate.scss
@@ -9,9 +9,7 @@ $active:#FFF;
     margin: 0;
     box-sizing: border-box;
 }
-span{
-    display: none;
-}
+
 /*The line below stops the navbar animation when the window is being resized.*/
 .resize-animation-stopper * {
     transition: none !important;
@@ -26,12 +24,13 @@ a{
     color: $active;
 }
 span{
-    display:none;
+    display: none;
 }
-  
+  //removed the top section styles and added a width to the header and one rem to its padding.
 header{
     height:5rem;
-    padding:1rem .5rem;
+    width: 100%;
+    padding:1rem 1rem;
 
     #logo h1{
         font-size: 1.5rem;
@@ -78,22 +77,14 @@ header{
       align-items:center;
   }
 }
-#top{
-    width: 100%;
-}
 /*Intro Section*/
+//adding padding and more margin to my intro.
 #intro{
-    margin: 2rem 0 ;
+    margin: 5rem 0 15rem 0 ;
+    padding-bottom: 5rem;
 }
 #introHeader{
-
-
-    h1{
-        font-size: 2.5em;
-        margin-bottom: 1rem;
-    }
-    h2{
-        font-size: 2em;
+    h1,h2{
         margin-bottom: 1rem;
     }
     p{
@@ -108,7 +99,6 @@ header{
 #introParagraph, .about_bio, #contact_info{
     padding: 1rem 1,5rem;
     margin: .5rem 2rem;
-    text-align: justify;
 }
 /*About Section*/
 #about, #tech{
@@ -119,56 +109,189 @@ header{
     margin: 2rem 0;
 }
 .about_bio{
-    font-size: x-large;
     margin-bottom: 2rem;
     padding-left: 1.5rem;
 
-    }
+}
 
 /*Tech Section*/
-#tech h2{
-    text-align: center;
-}
 #tech_list{
     margin-top: 1.5rem;
 }
 .tech_item i{
-    font-size: 3em;
     margin: 1rem 0;
-}
-.tech_item h4{
-    font-size: 1em;
 }
 
 /*Works Section*/
 .projects{
     width:90%;
-    align-items: center;
+    height: 100%;
+    margin: 2rem 0;
+    padding-bottom:4rem;
     img{
         width: 100%;
     }
 }
 .cta{
-    display: flex;
-    justify-content: space-between;
-    width: 90%;
-    padding: 1.5rem 1rem;
+    width: 100%;
+    padding: 1rem 0;
+    margin: 1rem 0;
+    margin-left: -9rem;
+    
 
-    button{
-        border: 1.5px solid $accent;
-        border-radius: 50px;
-        padding: .5rem 1rem;
-        margin-top: 1.5rem;
-        background: none;
+    @keyframes animate1A{
+        0%{
+            transform: translateX(-100%);
+        }
+        100%{
+            transform: translateX(100%);
+        }
     }
-    button:hover{
-        background-color: $accent;
+    @keyframes animate2A{
+        0%{
+            transform: translateY(-100%);
+        }
+        100%{
+            transform: translateY(100%);
+        }
+    }
+    @keyframes animate3A{
+        0%{
+            transform: translateX(100%);
+        }
+        100%{
+            transform: translateX(-100%);
+        }
+    }
+    @keyframes animate4A{
+        0%{
+            transform: translateY(100%);
+        }
+        100%{
+            transform: translateY(-100%);
+        }
+    }
+
+    @keyframes animate1B{
+        0%{
+            transform: translateX(100%);
+        }
+        100%{
+            transform: translateX(-100%);
+        }
+    }
+    @keyframes animate2B{
+        0%{
+            transform: translateY(100%);
+        }
+        100%{
+            transform: translateY(-100%);
+        }
+    }
+    @keyframes animate3B{
+        0%{
+            transform: translateX(-100%);
+        }
+        100%{
+            transform: translateX(100%);
+        }
+    }
+    @keyframes animate4B{
+        0%{
+            transform: translateY(-100%);
+        }
+        100%{
+            transform: translateY(100%);
+        }
+    }
+    .cta_btn{
+        position: absolute;
         color: $active;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-size: 1em;
+        padding: 15px 30px;
+        box-shadow: 0 10px 60px rgba(225, 226, 236, 0.5);
+        overflow: hidden;
+    
+        ::before{
+            content: '';
+            position: absolute;
+            width: 50%;
+            top: 2px;
+            left: 2px;
+            bottom: 2px;
+            background: rgba(147, 49, 204, 0.05);
+        }
+    }
+    .cta_btn span:nth-child(1){
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #9331cc, $accent);
+        animation: animate1A 2s linear infinite;
+    }
+    .cta_btn span:nth-child(2){
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 2px;
+        height: 100%;
+        background: linear-gradient(to bottom, #9331cc, $accent);
+        animation: animate2A 2s linear infinite;
+        animation-delay: 1s;
+    }
+    .cta_btn span:nth-child(3){
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to left, #9331cc, $accent);
+        animation: animate3A 2s linear infinite;
+    }
+    .cta_btn span:nth-child(4){
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 2px;
+        height: 100%;
+        background: linear-gradient(to top, #9331cc, $accent);
+        animation: animate4A 2s linear infinite;
+        animation-delay: 1s;
+    }
+
+    .live span:nth-child(1){
+        background: linear-gradient(to right, #02198e, #1472ff);
+        animation: animate1B 2s linear infinite;
+    }
+     .live span:nth-child(2){
+        background: linear-gradient(to right, #02198e, #1271ff);
+        animation: animate2B 2s linear infinite;
+        animation-delay: 1s;
+    }
+     .live span:nth-child(3){
+        background: linear-gradient(to right, #02198e, #1271ff);
+        animation: animate3B 2s linear infinite;
+    }
+     .live span:nth-child(4){
+        background: linear-gradient(to right, #02198e, #1271ff);
+        animation: animate4B 2s linear infinite;
+        animation-delay: 1s;
+    }
+
+    button:hover{
         cursor: pointer;
    }
 }
 
-
+/*Contact Form Section*/
 #contact_form{
     width: 22rem;
     height:35rem;
@@ -176,10 +299,6 @@ header{
     padding: 1.5rem 2.5rem;
     border: 2px solid $accent;
     border-radius: 15px;
-
-    h1{
-        font-size: 2em;
-    }
 }
 
 #collected_info{
@@ -216,10 +335,7 @@ header{
   #submit{
     padding: 5px 25px;
     width:10rem;
-    background: none;
-    color: #FFF;
-    background: #EE7BD9;
-    border: solid 2px none;
+    border: solid 1px none;
     border-radius: 20px;
   }
   #submit:hover{
@@ -245,15 +361,7 @@ header{
       #nav_list{
         height:.5rem;
         width:100%;
-        flex-direction:row;
-        align-items:center;
     }
-      .nav_item{
-        color:var(--primary-color);
-      }
-      .nav_item:hover{
-        color:var(--secondary-color);
-      }
 
     #Intro{
         height: 30vh;
@@ -278,19 +386,11 @@ header{
         margin-bottom: 5rem;
     
         #tech_list{
-            width: 55%;
-            flex-wrap: wrap;
-        
+            width: 30%;
+
             .list_items {
-                font-size: 1em;
-                margin: 0 4rem;
+                margin: 1rem 15.6rem;
                 padding: 0 1rem;
-        
-                .tech_item{
-                    p{
-                       font-size: .4em;
-                    }
-                }
             }
             
         }
@@ -298,7 +398,7 @@ header{
     #work{
         margin-bottom: 10rem;
         .projects{
-            margin: 2rem 0;
+            
             img{
                 width: 65%;
                 border-radius: 25px;
@@ -306,9 +406,12 @@ header{
             .cta{
 
                 width: 35%;
+                margin-top: 3rem;
+                margin-left: 0;
 
                  button{
-                    padding: .8rem 3rem;
+                    padding: .8rem 4rem;
+                    border: none;
                 }
             }
         }
